2002-12-12  Chris Lyttle  <chris@wilddev.net>

	* acconfig.h: added to repository
	* doc-tools: copy from main gnucash module
	* Makefile.am: add doc-tools to subdir
	* configure.in: add perl check, berkeley-db check, doc-tools makefile
	* doc-tools/Makefile.am: add routines to make and install search-db
	* doc-tools/dbadd.c: added to repository
	* doc-tools/build-help-index.in: cleaned up html file stripping, use
	  perl module File::Basename to make relative path to html dirs
	* gnucash-docs.spec.in: added omf stuff
	
2002-12-09  Chris Lyttle  <chris@wilddev.net>

	* Makefile.am: add guide to subdirs
	* configure.in: add guide dir to makefiles
	* guide/C/gnucash-guide-C.omf: remove extra name from holders

2002-12-09  Chris Lyttle  <chris@wilddev.net>

	* HACKING: added docs hacking guidelines
	* Makefile.am: remove chunk.xsl, add xsl and styleshhet to EXTRA_DIST
	* NEWS: add version history
	* README: add requirements
	* xmldocs.make: changed to use xsl dir stylesheets, generate filenames
	  from id tags, only generate html on install, move html to a subdir
	  of docs dir to prevent filename clashes, copy in stylesheet png's
	* stylesheet: copy from install with  png's needed for stylesheets
	* xsl: copy from gnome-docu/gdp better stylesheets
	* guide/Makefile.am: added to repository
	* guide/C/Makefile.am: added to repository
	* guide/C/fdl-appendix.xml: added to repository
	* guide/C/gnucash-guide-C.omf: added to repository
	* guide/C/legal.xml: added to repository
	* guide/C/gnucash-guide.xml: moved from gnucash.xml
	* guide/C/gnucash.xml: moved to gnucash-guide.xml
	* chunk.xsl: remove from repository

2002-12-05  Chris Lyttle  <chris@wilddev.net>

	* configure.in: remove help/gnucash-docs dir
	* help/gnucash-docs/C/Makefile.am: remove help/gnucash-docs dir
	* help/Makefile.am: change subdir to C
	* guide: dir moved here from doc/manual in gnucash module

2002-12-01  Chris Lyttle  <chris@wilddev.net>
