@@ -1,6 +1,7 @@
 Makefile
 Makefile.in
 aclocal.m4
+autom4te-2.53.cache
 config.guess
 config.h
 config.h.in
