@@ -2,4 +2,5 @@ Makefile
 Makefile.in
 *.html
 omf_timestamp
+gnucash-help
 gnucash-help-C.omf.out
