@@ -1,3 +1,8 @@
+2002-12-15  Chris Lyttle  <chris@wilddev.net>
+
+	* xmldocs.make: patch from hampton to fix distcheck
+	* doc-tools/Makefile.am: patch from hampton to fix distcheck
+
 2002-12-12  Chris Lyttle  <chris@wilddev.net>
 
 	* acconfig.h: added to repository
